# LIMEN

./: .gitignore  CONTRIBUTING.md  Dockerfile  MEMORY.md  Makefile  Procfile  README.md  dashboard.html  docker-compose.yml  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: log.md  update.md
.github/workflows/: ci.yml  limen-log.yml  limen-update.yml  quality.yml  regen-memory.yml
limen/: __init__.py  __main__.py  rest.py  server.py  state.py
limen/core/: __init__.py  complexity.py  information.py  phi.py
limen/phase1/: __init__.py  measures.py  network.py  sweep.py  visualize.py
limen/phase2/: __init__.py  biological.py  eeg_loader.py  validate.py
limen/phase3/: USAGE.md  __init__.py  mcp_config.json  self_model.py  server.py  state.py
limen/phase4/: __init__.py  detector.py  monitor.py
scripts/: backup_state.py  deploy.sh  evaluate_recall.py  export_import.py  export_state.py  github_sync.py  import_state.py  limen@.service  local_journal.py  log_from_issue.py  migrate_state.py  push_state_github.py  reconcile_journal.py  run_phase1.py  run_phase2.py  run_server.py  state_core.py  state_integrity.py  state_ops.py  state_tools.py  sync_memory.py  validate_state.py
state/: limen.json  schema.json
tests/: test_backup_roundtrip.py  test_evaluate_recall.py  test_export_import.py  test_limen.py  test_measures.py  test_network.py  test_recall_quality.py  test_reconcile_journal.py  test_server.py  test_state_workflows.py  test_sync_memory.py  test_validate_state.py
