[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "limen"
version = "0.2.0"
description = "Persistence layer for Claude — MCP server for cross-conversation memory"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "LGPL-2.1"}

dependencies = [
    "mcp>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
limen = "scripts.run_server:main"

[tool.setuptools.packages.find]
include = ["limen*"]
